--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+auxiliary.netbeanstypescript.compileOnSave=true
 auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
 browser.autorefresh.Chrome=true
 browser.autorefresh.Chrome.INTEGRATED=true
